# Supervisor

./: .gitignore  LICENSE.md  README.adoc  README.md
.github/workflows/: pre-commit.yml
archives/py-loc/: p.swift
archives/templates/: README.md  run_without_candle.sh
archives/workflows/simple_mlrMBO_example/ext/EQ-R/eqr/: configure.ac  settings.mk  settings.mk.in
docs/: README.adoc  README.txt  adoc.sh  build.sh  format.css  home.adoc  home.css  home.html  summit.txt  swift-t-settings-summit.sh  user_guide.adoc  user_guide.html
examples/py-loc/: p.swift
models/: install-DeepTTC.sh  install-LGBM.sh  install-Uno.sh
models/Comparator/: cmp_baseline_keras2.py  cmp_default_model.txt  cmp_models.txt  comparator.py
models/OneD/: README.md  oned.py  oned_baseline_keras2.py  oned_default_model.txt
models/Random/: random_baseline_keras2.py
python/: .gitignore
python/eqpy/: EQPy.swift  eqpy.py
python/hyperopt/: Readme.md  settings.sh
scratch/: README.adoc
scratch/crusher/: py-tf.swift  test.sh
scratch/csv2f64/: .gitignore  Makefile  README.adoc  csv2f64.c  f64_2csv.c  f64_2hdf.py  hdf2f64.py  inject-noise.py  run  scan.sh  util.h
scratch/fake-lbann/: .gitignore  Makefile  README.adoc  fl.c  fl.h  fl_interface.c  fl_interface.h  fl_interface.i  test_1.py
scratch/histawk/: hist.awk  hist.sh
scratch/horovod/: .gitignore  Makefile  horovod-1.py  horovod.i  horovod.swift  horovod.tcl  make-package.tcl  test-1.swift  test-2.swift  test.sh
scratch/horovod2/: Makefile  README.adoc  controller.c  controller.h  py  run-test  settings.sh  slurp.c  slurp.h  test-0.C  test-1.c  test-2.C  test-3.c  (+3 more)
scripts/: README.adoc  hpo-grab.sh  hpo_table.py  preprocess.sh  shrink-log-single.sh  shrink-log.mk  shrink-log.py  shrink-logs.sh
spack/: spack.yaml
swift_projects/: .gitignore
templates/: README.md  run_without_candle.sh  submit_candle_job.sh
workflows/: README.adoc  known-benchmarks.sh  test-all.sh
(+1521 files in other folders)
